<resources>
    <string name="app_name">My Application</string>
    <string name="pashupati_travel">PASHUPATI TRAVEL</string>
    <string name="explore_with_us">Explore with us</string>
    <string name="main_logo_of_the_app">main logo of the app</string>
    <string name="hiking">Hiking</string>
    <string name="rafting">Rafting</string>
    <string name="paragliding">Paragliding</string>
    <string name="flight">Flight</string>
    <string name="hotel">Hotel</string>
    <string name="helicopter">Helicopter</string>
    <string name="all_right_reserved_by_pashupati_travels_pvt_ltd">All Right Reserved by Pashupati Travels.Pvt.Ltd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="ic_eight">ic_eight</string>
    <string name="harry_pyniro">Harry Pyniro</string>
    <string name="_9877443434">9877443434</string>
    <string name="delete">delete</string>
    <string name="paurakh_saud">Paurakh Saud</string>
    <string name="its_hero_boy">_itsheroboy</string>
    <string name="california">California</string>
    <string name="post_one">postOne</string>
    <string name="i_living_my_life">I living my life😍</string>
</resources>