<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="#6D009688"
            android:id="@+id/llROw"
            android:padding="11dp">

            <ImageView
                android:id="@+id/ivProfilePhoto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/ic_eight"
                android:src="@mipmap/ic_eight"/>

            <LinearLayout
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="2dp"
                    android:text="@string/harry_pyniro"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="2dp"
                    android:text="@string/_9877443434" />


            </LinearLayout>

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="30dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_height="30dp"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_delete"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>